# nanoSAE

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: app.py
nanosae/: __init__.py  analysis.py  config.py  embeddings.py  features.py  prompts.py  trainers.py
nanosae/models/: __init__.py  sae.py  topk.py
src/nanosae/: __init__.py  analysis.py  config.py  embeddings.py  features.py  models.py  plot.py  sae.py  trainers.py  utils.py
